# StashDocs

./: README.md  setup.cfg
src/stashdocs/: main.py  stash.py  stashgui.py
src/stashdocs/utils/: commoncmd.py  configloader.py  encryption.py
