[metadata]
name = StashDocs
version = 0.0.1
author = ArcticTechnology
author_email = arctic.technology.mail@gmail.com
license = MIT
description = This is a sandbox package that is currently under construction.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = starter, package, template
url = https://github.com/ArcticTechnology/StashDocs
classifiers =
	Development Status :: 3 - Alpha
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	Intended Audience :: Financial and Insurance Industry
	Topic :: Education
	Topic :: Software Development
	Topic :: Software Development :: Libraries

[options]
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	stashdocs = stashdocs.main:main

[options.data_files]
stashdocs/config = config/config.json